# stocks-strategy

./: .gitignore  README.md  STRATEGY.md  pyproject.toml
scripts/: nightly_update.sh
src/nrfm/: __init__.py  cli.py  config.py  inbox.py  notify.py  store.py  validate.py
src/nrfm/engine/: backtest.py  live.py  panels.py  select.py  signals.py
src/nrfm/sources/: nasdaq.py  yahoo.py
tests/: test_data_layer.py  test_engine.py  test_inbox.py  test_live.py  test_notify.py
