[project]
name = "nrfm"
version = "0.1.0"
description = "Nordic Regime-Filtered Momentum - data layer and strategy engine (see STRATEGY.md)"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "yfinance>=0.2.50",
]

[project.scripts]
nrfm = "nrfm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nrfm"]

[dependency-groups]
dev = ["pytest>=8"]
